fixes contrast color on sitesientesgato landing page

--- a/app/assets/stylesheets/custom/_sitesientesgato.scss
+++ b/app/assets/stylesheets/custom/_sitesientesgato.scss
@@ -65,7 +65,7 @@
   }
 
   .lead {
-    color: white;
+    color: black;
     font-size: rem-calc(26);
     font-style: italic;
     padding-top: $line-height*3;
